2006-05-26  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/custom/custom_widget/custom_gtkrc: Add the type prefix 
	in the style block, which is apparently needed, though it still says it 
	is an invalid identifier.
	* examples/book/custom/custom_widget/mywidget.cc: Use _ instead of - 
	for the style name, in case that is a problem.

2006-05-26  Murray Cumming  <murrayc@murrayc.com>

	* docs/reference/Doxyfile.in: In PREDEFINED, set 
	GLIBMM_VFUNCS_ENABLED, GLIBMM_PROPERTIES_ENABLED, and 
        GLIBMM_EXCEPTIONS_ENABLED so that those parts of the API 
	show up in the documentation.
	* examples/book/custom/custom_widget/custom_gtkrc:
	* examples/book/custom/custom_widget/mywidget.cc:
	Attempt (so far unsuccessfully) to show how to make an 
	aspect of a custom widget themable.

2006-05-22  Marko Anastasov <marko@marko.anastasov.name>

        * gtk/src/gtk_methods.defs: Regenerated with h2defs.py.
        * gtk/src/gtk_signals.defs: Added paginate signal for PrintOperation.
        * gtk/src/printer.hg: Ignore gtk_printer_compare.
        * gtk/src/printjob.hg: Added set/get_track_print_status().
        * gtk/src/printoperation.hg: Added set_track_print_status() and cancel()
        methods, paginate signal.

2006-05-19  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: RefPtr appendix: Reword the bit about using 
	an official shared_ptr<>. It would not be that easy.
	* gtk/src/gtk_docs_override.xml: gtk_table_get_homogenous(). Override because 
	gtk_table_get_homogenous() is for some reason not being automatically changed to 
	get_homongenous().

2.9.3:

2006-05-18  Murray Cumming  <murrayc@murrayc.com>

        * gdk/src/pixbufloader.hg: Add _CONVERSION() needed by write(), now that
        glibmm actually does the conversion.
        * gtk/src/editable.hg: Use _VFUNC_H() as we did before the big #ifdef changes.
        There is no need to stop using it, and it keeps the vfunc order the same as before.
