@@ -1,3 +1,9 @@
+2006-05-26  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
+
+	* examples/treemodelcustom/exampletreemodel.cc: remove interface
+	registration statements from constructor of the example custom treemodel
+	which were causing runtime warnings.
+
 2006-05-26  Murray Cumming  <murrayc@murrayc.com>
 
 	* examples/book/custom/custom_widget/custom_gtkrc: Add the type prefix 
